Style: Fix alignment of New post for smartphones and smaller devices

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -287,6 +287,10 @@ a {
     align-items: center;
   }
 
+  .new-post {
+    min-width: 300px;
+  }
+
   .form {
     min-width: 280px;
   }
